--- a/src/index.css
+++ b/src/index.css
@@ -33,19 +33,42 @@ p {
   margin: 1.2rem 0;
 }
 
+/* UTILITIES */
+/* Button */
 button {
-  border: 0;
-  padding: 8px;
-  border-radius: 4px;
-  color: white;
-  background: var(--primary);
-  cursor: pointer;
+  padding: 5px 1rem;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1rem;
+  font-weight: 600;
+  border-radius: 5px !important;
+}
+
+.primary-btn {
+  background: var(--accent-clr);
+  border: 2px solid var(--accent-clr);
+  color: var(--light-clr);
+}
+
+.primary-btn:hover {
+  background: var(--light-clr);
+  color: var(--accent-clr);
+}
+
+.secondary-btn {
+  border: 2px solid var(--accent-clr);
+}
+
+.secondary-btn:hover {
+  background: var(--accent-clr);
+  color: var(--light-clr);
 }
 
 /* navbar */
 header nav {
   display: flex;
-  gap: 16px;
+  gap: 1rem;
   justify-content: flex-end;
   max-width: 1200px;
   margin: 0 auto;
@@ -53,19 +76,63 @@ header nav {
 
 header nav .logo {
   margin-right: auto;
-  border-bottom: 3px solid var(--primary);
+  border-bottom: 3px solid var(--accent-clr);
 }
 header nav a {
   text-decoration: none;
   padding: 6px;
   border-radius: 4px;
+  color: var(--accent-clr);
 }
 header nav a.active {
-  background: var(--primary);
+  text-decoration: underline;
 }
 
 /* page content */
 main {
   max-width: 1200px;
   margin: 40px auto;
+}
+
+/* CONTACT PAGE */
+.contact .socials {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 0.75rem;
+}
+
+.contact p {
+  margin-bottom: 1rem;
+}
+
+.contact .socials i {
+  font-size: 1.2rem;
+}
+.contact input,
+.contact textarea {
+  margin-bottom: 0.5rem;
+  padding: 0.25rem;
+}
+
+/* contact form */
+form {
+  margin-top: 30px;
+}
+form input,
+form label span,
+form textarea {
+  display: block;
+}
+form input,
+form textarea {
+  margin-bottom: 30px;
+  padding: 8px;
+  border-radius: 4px;
+  border: 0;
+  width: 300px;
+  color: var(--secondary);
+}
+form label span {
+  margin-bottom: 10px;
 }
