--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;700&family=Lato:wght@400;700&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=League+Spartan:wght@300;400;500;600;700&family=Spectral:wght@300;400;500;600;700&display=swap");
 
 :root {
   --light-clr: #fff;
@@ -12,8 +10,8 @@
   --greyscale-dark-clr: #4c4c65;
   --greyscale-light-clr: #e2e3e7;
 
-  --header-font-family: "Inconsolata", monospace;
-  --para-font-family: "Lato", sans-serif;
+  --header-font-family: "Spectral", serif;
+  --para-font-family: "League Spartan", sans-serif;
   --misc-font-family: "DM Serif Display", serif;
 
   --box-shadow: 0 0 2rem -1rem rgba(0, 0, 0, 0.2);
@@ -29,7 +27,7 @@ body {
 }
 
 h1 {
-  font-size: 3rem !important;
+  font-size: 5rem !important;
   font-family: var(--header-font-family);
   line-height: 1.25 !important;
 }
@@ -131,9 +129,10 @@ main {
 }
 
 .description {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
+  font-weight: 300;
+  letter-spacing: 1px;
   margin-top: 1.5rem;
-  font-size: 1.25rem;
 }
 
 .role {
@@ -143,6 +142,37 @@ main {
   color: var(--accent-clr);
   text-transform: uppercase;
 }
+
+/* Skills */
+.skills-icons {
+  font-size: 4rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.skill-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  /* background: var(--accent-clr);
+  color: var(--light-clr); */
+}
+
+.skill-icon p {
+  padding: 1rem;
+  font-size: 1.25rem;
+}
+
+.skill-icon i {
+  font-size: 3.5rem;
+  /* background: var(--accent-clr); */
+  color: var(--accent-clr);
+}
+
 /* CONTACT PAGE */
 .contact .socials {
   display: flex;
@@ -150,7 +180,6 @@ main {
   justify-content: flex-start;
   gap: 0.75rem;
 }
-
 .contact p {
   margin-bottom: 1rem;
 }
