--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ header nav {
 
 header nav .logo {
   margin-right: auto;
-  font-size: 1.35rem;
+  font-size: 1.5rem;
   font-family: var(--misc-font-family);
   color: var(--dark-clr);
   flex-grow: 1;
@@ -100,10 +100,10 @@ header nav .logo:hover {
 header nav a {
   text-decoration: none;
   padding: 0.25rem;
-  border-radius: 4px;
   color: var(--accent-clr);
-  font-size: 1.2rem;
+  font-size: 1.25rem;
   font-family: var(--para-font-family);
+  font-weight: 500;
 }
 
 header nav a .active {
@@ -141,6 +141,14 @@ main {
   font-family: "Inconsolata", monospace;
   color: var(--accent-clr);
   text-transform: uppercase;
+}
+
+.img-container {
+  mask-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1) 50%,
+    transparent 100%
+  );
 }
 
 /* Skills */
