--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   --misc-font-family: "DM Serif Display", serif;
 
   --box-shadow: 0 0 2rem -1rem rgba(0, 0, 0, 0.2);
+  --box-shadow--small: 0 0 0.5rem -0.25rem rgba(0, 0, 0, 0.2);
 }
 
 body {
@@ -30,6 +31,7 @@ h1 {
   font-size: 5rem !important;
   font-family: var(--header-font-family);
   line-height: 1.25 !important;
+  margin-bottom: 5rem !important;
 }
 
 /* UTILITIES */
@@ -128,6 +130,12 @@ main {
   justify-content: center;
 }
 
+.hero-title {
+  font-size: 5rem;
+  font-family: var(--header-font-family);
+  line-height: 1.25;
+}
+
 .description {
   font-size: 1.5rem;
   font-weight: 300;
@@ -179,6 +187,56 @@ main {
   font-size: 3.5rem;
   /* background: var(--accent-clr); */
   color: var(--accent-clr);
+}
+
+/* PROJECTS PAGE */
+.projects-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5rem;
+}
+
+.project-card {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+}
+
+.project-card__img {
+  border-radius: 0.3rem;
+  box-shadow: var(--box-shadow);
+  overflow: hidden;
+  padding-bottom: 1rem;
+  position: relative;
+  width: calc(100% - 1.5rem);
+  z-index: -1;
+  object-fit: fill;
+}
+
+.project-card__content {
+  background-color: var(--light-clr);
+  border: 1px solid var(--accent-clr);
+  border-radius: 0.3rem;
+  box-shadow: var(--box-shadow--small);
+  flex-grow: 1;
+  margin-top: -3rem;
+  margin-left: 1.5rem;
+  padding: 1.5rem;
+  padding-top: 1rem;
+}
+
+.project-card__content h2 {
+  margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+  color: var(--accent-clr);
+}
+
+/* .project-card__content a {
+} */
+.project-card__content p {
+  font-size: 1.25rem;
+  margin-bottom: 0 !important;
 }
 
 /* CONTACT PAGE */
