--- a/src/index.css
+++ b/src/index.css
@@ -19,12 +19,20 @@
 }
 
 body {
-  font-family: var(--para-font-family);
+  font-family: var(--para-font-family) !important;
   font-size: 16px;
-  line-height: 1.5;
   background: var(--light-clr);
   min-height: 100vh;
   text-rendering: optimizeSpeed;
+  vertical-align: baseline;
+}
+
+/* page content */
+main {
+  padding-top: 10rem;
+  padding-bottom: 5rem;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 h1 {
@@ -70,6 +78,7 @@ button {
 header {
   position: fixed;
   top: 0;
+  height: 80px;
   width: 100%;
   z-index: 1000;
   padding: 0.75rem 0;
@@ -110,13 +119,6 @@ header nav a {
 
 header nav a .active {
   text-decoration: underline;
-}
-
-/* page content */
-main {
-  padding-top: 10rem;
-  max-width: 1200px;
-  margin: 40px auto;
 }
 
 /* HOME PAGE */
@@ -163,7 +165,6 @@ main {
 .skills-icons {
   font-size: 4rem;
   margin-top: 5rem;
-  margin-bottom: 5rem;
   display: flex;
   justify-content: space-between;
 }
@@ -238,20 +239,49 @@ main {
   margin-bottom: 0 !important;
 }
 
-/* CONTACT PAGE */
-.contact .socials {
+/* ABOUT PAGE */
+.about-description {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  gap: 0.75rem;
-}
-.contact p {
-  margin-bottom: 1rem;
+  justify-content: center;
 }
 
-.contact .socials i {
-  font-size: 1.2rem;
+/* CONTACT PAGE */
+.contact-layout {
+  gap: 3rem !important;
 }
+
+.contact-socials {
+  margin-top: 2rem;
+}
+
+.contact-social__link {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 0.5rem 0;
+  vertical-align: baseline;
+}
+
+.contact-social__link:hover {
+  text-decoration: underline;
+  color: var(--accent-clr);
+}
+
+.contact-social__icon {
+  font-size: 2rem;
+  color: var(--greyscale-dark-clr);
+}
+
+.contact-social__icon:hover {
+  color: var(--accent-clr);
+}
+.contact-social__description {
+  font-size: 1.5rem;
+  color: var(--accent-clr);
+}
+
 .contact input,
 .contact textarea {
   margin-bottom: 0.5rem;
@@ -260,24 +290,17 @@ main {
 
 /* contact form */
 form {
-  margin-top: 30px;
+  margin-top: 1.5rem;
 }
-form input,
-form label span,
-form textarea {
-  display: block;
+.form-label {
+  font-size: 1.25rem;
 }
-form input,
-form textarea {
-  margin-bottom: 30px;
-  padding: 8px;
-  border-radius: 4px;
-  border: 0;
-  width: 300px;
-  color: var(--secondary);
-}
-form label span {
-  margin-bottom: 10px;
+
+.form input,
+.form textarea {
+  border-radius: 0.3rem !important;
+  border: 1px solid var(--accent-clr);
+  padding: 0.5rem;
 }
 
 /* FOOTER */
