--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ button {
 header {
   position: fixed;
   top: 0;
-  height: 80px;
+  height: 4rem;
   width: 100%;
   z-index: 1000;
   padding: 0.75rem 0;
@@ -187,6 +187,7 @@ header nav a .active {
 .skill-icon p {
   padding: 1rem;
   font-size: 1.25rem;
+  margin-bottom: 0 !important;
 }
 
 .skill-icon i {
